Explicitly set docker latest tag

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -53,3 +53,4 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
           dockerfile: docker/Dockerfile
+          tags: "latest"
