Build docker image from local package

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -50,6 +50,14 @@ jobs:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
 
+      - name: copy package to Docker folder
+        run: |
+          wheel_path=$(ls dist/*.whl)
+          mkdir -p "docker/packages"
+          cp "${wheel_path}" "docker/packages"
+          pip install ${wheel_path}
+          copyxnat --help
+
       - name: Publish to Docker
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
