--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,3 +27,58 @@ jobs:
       - name: Run tests
         run: |
           python -m pytest -v -s ./tests/
+
+  test-package:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+        python-ver: [3.9]
+
+    steps:
+      - name: Get tag
+        id: tag
+        uses: dawidd6/action-get-tag@v1
+
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Install setuptools
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel
+
+      - name: Create wheel
+        run: |
+          python setup.py bdist_wheel
+
+      - name: Test wheel
+        run: |
+          wheel_path=$(ls dist/*.whl)
+          pip install ${wheel_path}
+          copyxnat --help
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements-dev.txt
+
+      - name: Run linting
+        run: |
+          pylint --rcfile=tests/pylintrc copyxnat tests
