--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 # This file lists the python packages that your software depends on.
-# It is used by pip to manage software dependencies. It is not to be
-# confused with the software requirements, which are listed in
-# doc/requirements.rst
+# It is used by pip to manage software dependencies.
 pyxnat~=1.4
 
 configparser~=5.0.1
-urllib3~=1.26.2
+urllib3~=1.26.3
 pydicom==2.1.2
+appdirs==1.4.4
