--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@
 # It is used by pip to manage software dependencies.
 pyxnat~=1.4
 
-configparser~=5.0.1
+configparser==4.0.2
 urllib3~=1.26.3
-pydicom==2.1.2
+pydicom==1.4.2
 appdirs==1.4.4
 xmltodict==0.12.0
 lxml~=4.6.2
