--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,4 +73,4 @@ jobs:
 
       - name: Run linting
         run: |
-          pylint --rcfile=tests/pylintrc copyxnat tests
+          pylint --rcfile=tests/pylintrc copyxnat
